--- a/paascloud-monitor-dev.yml
+++ b/paascloud-monitor-dev.yml
@@ -12,8 +12,8 @@ spring:
         enabled: true
       notify:
         mail:
-          to: xxxxxxxx@163.com
-          from: paascloudTest@163.com
+          to: 986048829@qq.com
+          from: 986048829@qq.com
       turbine:
         clusters: default
         location: paascloud-monitor
